Add redstone sand

--- a/mod/src/main/resources/assets/holiday-server-mod/lang/en_us.json
+++ b/mod/src/main/resources/assets/holiday-server-mod/lang/en_us.json
@@ -35,9 +35,11 @@
   "block.holiday-server-mod.banner.tater.white": "White Tater",
   "block.holiday-server-mod.banner.tater.yellow": "Yellow Tater",
   "item.holiday-server-mod.tater_banner_pattern": "Tater Banner Pattern",
+  "block.holiday-server-mod.redstone_sand": "Redstone Sand",
   "block.holiday-server-mod.tiny_potato": "Tiny Potato",
   "item.holiday-server-mod.absolutely_safe_armor": "Absolutely Safe Armor",
   "item.holiday-server-mod.absolutely_safe_armor.exit_tooltip": "You are absolutely safe.",
+  "tag.block.holiday-server-mod.crying_impactors": "Crying Impactors",
   "painting.holiday-server-mod.outdated.title": "Outdated",
   "painting.holiday-server-mod.outdated.author": "Fabric Contributors"
 }
